infrastructure/kubernetes/microservice/notification-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microservices # Cùng namespace với các dịch vụ khác
spec:
  replicas: 1 # Chạy 1 bản là đủ (có thể tăng lên nếu gửi quá nhiều mail)
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      nodeSelector:
        kubernetes.io/hostname: my-dev-cluster-worker3
      containers:
        - name: notification-service
          # Nhớ build và push image này lên Docker Hub của bạn trước khi chạy K8s
          image: huynhnhub2204958/notification-service:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 3003 # Khớp với cổng trong code Node.js
