infrastructure/kubernetes/microservice/notification-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: microservices
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 3002
